@@ -1,2 +1,9 @@
 # VynilBox
 A application based on LetterBox but for Songs
+
+Is necessary include some Libraries:
+SQLConnector
+ControlsFX
+
+And a command in JVM:
+--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
